--- a/appenv/src/templates/index.html
+++ b/appenv/src/templates/index.html
@@ -1,10 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html ng-app="appMain" lang="en">
 <head>
+    <base href="../static/app">
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Index</title>
+    <script src="../static/vendor/angular/angular.min.js"></script>
+    <script src="../static/vendor/angular/ui-bootstrap.min.js"></script>
+    <script src="../static/vendor/angular/ui-bootstrap-tpls.min.js"></script>
+    <script src="../static/vendor/angular-route/angular-route.min.js"></script>
+    <script src="../static/app/app.js"></script>
+    <script src="../static/app/config.js"></script>
 </head>
 <body>
-
+<div>
+    #navigation...
+</div>
+<div ng-view></div>
+<div>
+    #footer...
+</div>
 </body>
 </html>
