missplaced char in template

--- a/appenv/src/src/templates/index.html
+++ b/appenv/src/src/templates/index.html
@@ -29,12 +29,12 @@
 </head>
 <body ng-controller="NavController as navCtrl">
 <div ng-include="{{url_for('static', filename='navigation.html')}}">
-    {{#navigation...}}
+    #navigation...
 </div>
 <h1 ng-init="temp='helloworld'">{{ {{temp}} }}</h1>
 <div ng-view></div>
 <div>
-    {{#footer...}}
+    #footer...
 </div>
 </body>
 </html>
