--- a/appenv/src/src/templates/index.html
+++ b/appenv/src/src/templates/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html {% raw %} ng-app="appMain" {% raw %} lang="en">
+<html {% raw %} ng-app="appMain" {% endraw %} lang="en">
 <head>
     <base href="../static/app">
     <meta charset="UTF-8">
