urls for scripts

--- a/appenv/src/src/templates/index.html
+++ b/appenv/src/src/templates/index.html
@@ -6,19 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Index</title>
     <link rel="stylesheet" href="{{url_for('static', filename='bootstrap.min.css')}}"/>
-    <script src="{{url_for('static', filename='angular.min.js')}}"></script>
-    <script src="{{url_for('static', filename='angular-route.min.js')}}"></script>
-    <script src="{{url_for('static', filename='ui-bootstrap.min.js')}}"></script>
-    <script src="{{url_for('static', filename='ui-bootstrap-tpls.min.js')}}"></script>
-    <script src="{{url_for('static', filename='app.js')}}"></script>
-    <script src="{{url_for('static', filename='config.js')}}"></script>
-    <script src="{{url_for('static', filename='nav.controller.js')}}"></script>
-    <script src="{{url_for('static', filename='session.service.js')}}"></script>
-    <script src="{{url_for('static', filename='session-info.controller.js')}}"></script>
-    <script src="{{url_for('static', filename='sessions.controller.js')}}"></script>
+    <script src="{{url_for('static', filename='/vendor/angular/angular.min.js')}}"></script>
+    <script src="{{url_for('static', filename='/vendor/angular-route/angular-route.min.js')}}"></script>
+    <script src="{{url_for('static', filename='/vendor/angular-bootstrap/ui-bootstrap.min.js')}}"></script>
+    <script src="{{url_for('static', filename='/vendor/angular-bootstrap/ui-bootstrap-tpls.min.js')}}"></script>
+    <script src="{{url_for('static', filename='/app/app.js')}}"></script>
+    <script src="{{url_for('static', filename='/app/config.js')}}"></script>
+    <script src="{{url_for('static', filename='/app/navigation/nav.controller.js')}}"></script>
+    <script src="{{url_for('static', filename='/app/sessions/session.service.js')}}"></script>
+    <script src="{{url_for('static', filename='/app/sessions/session-info.controller.js')}}"></script>
+    <script src="{{url_for('static', filename='/app/sessions/sessions.controller.js')}}"></script>
 </head>
-<body ng-controller="NavController as navCtrl">
-<div ng-include="{{url_for('static', filename='navigation.html')}}">
+<body {% raw %} ng-controller="NavController as navCtrl" {% endraw %}>
+<div ng-include="{{url_for('static', filename='/app/navigation/navigation.html')}}">
     #navigation...
 </div>
 {% raw %}
