--- a/appenv/src/src/templates/index.html
+++ b/appenv/src/src/templates/index.html
@@ -17,12 +17,11 @@
     <script src="{{url_for('static', filename='app/sessions/session-info.controller.js')}}"></script>
     <script src="{{url_for('static', filename='app/sessions/sessions.controller.js')}}"></script>
 </head>
-<body {% raw %} ng-controller="NavController as navCtrl" {% endraw %}>
-<div ng-include="{{url_for('static', filename='app/navigation/navigation.html')}}">
+<body>
+{% raw %}
+<div ng-controller="NavController as navCtrl" ng-include="{{url_for('static', filename='app/navigation/navigation.html')}}">
     #navigation...
 </div>
-{% raw %}
-<h1 ng-init="temp='helloworld'">{{temp}}</h1>
 {% endraw %}
 {% raw %}
 <div ng-view></div>
