--- a/appenv/src/src/templates/index.html
+++ b/appenv/src/src/templates/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Index</title>
-    <link rel="stylesheet" href="{{url_for('static', filename='bootstrap.min.css')}}"/>
+    <link rel="stylesheet" href="{{url_for('static', filename='vendor/bootstrap/bootstrap.min.css')}}"/>
     <script src="{{url_for('static', filename='vendor/angular/angular.min.js')}}"></script>
     <script src="{{url_for('static', filename='vendor/angular-route/angular-route.min.js')}}"></script>
     <script src="{{url_for('static', filename='vendor/angular-bootstrap/ui-bootstrap.min.js')}}"></script>
