--- a/appenv/src/src/templates/index.html
+++ b/appenv/src/src/templates/index.html
@@ -18,7 +18,8 @@
     <script src="{{url_for('static', filename='app/sessions/sessions.controller.js')}}"></script>
 </head>
 <body>
-<div ng-include="..{{url_for('static', filename='app/navigation/navigation.html')}}">
+<!--<div ng-include="..{{url_for('static', filename='app/navigation/navigation.html')}}">-->
+<div ng-include="'../static/app/navigation/navigation.html'">
     #navigation...
 </div>
 
