--- a/appenv/src/src/templates/index.html
+++ b/appenv/src/src/templates/index.html
@@ -24,7 +24,7 @@
 <body ng-controller="MainController as main">
 <navBar></navBar>
 <div>
-    <h2>Angular app is located at: <appLocation></appLocation></h2>
+    <h2>Angular app is located at: </h2><appLocation></appLocation>
 </div>
 <!--<div ng-view></div>-->
 
