--- a/appenv/src/src/templates/index.html
+++ b/appenv/src/src/templates/index.html
@@ -11,25 +11,12 @@
     <script src="{{url_for('static', filename='vendor/angular-bootstrap/ui-bootstrap.min.js')}}"></script>
     <script src="{{url_for('static', filename='vendor/angular-bootstrap/ui-bootstrap-tpls.min.js')}}"></script>
     <script src="{{url_for('static', filename='app/app.js')}}"></script>
-    <script src="{{url_for('static', filename='app/config.js')}}"></script>
-    <script src="{{url_for('static', filename='app/navigation/main.controller.js')}}"></script>
-    <script src="{{url_for('static', filename='app/navigation/nav.controller.js')}}"></script>
-    <script src="{{url_for('static', filename='app/navigation/nav.directive.js')}}"></script>
-    <script src="{{url_for('static', filename='app/sessions/session.service.js')}}"></script>
-    <script src="{{url_for('static', filename='app/sessions/session-info.controller.js')}}"></script>
+    <script src="{{url_for('static', filename='app/home/main.controller.js')}}"></script>
+    <script src="{{url_for('static', filename='app/sessions/sessions.service.js')}}"></script>
     <script src="{{url_for('static', filename='app/sessions/sessions.controller.js')}}"></script>
-    <script src="{{url_for('static', filename='app/dev/app.location.controller.js')}}"></script>
-    <script src="{{url_for('static', filename='app/dev/app.location.directive.js')}}"></script>
+    <!--<script src="{{url_for('static', filename='app/sessions/sessions.controller.js')}}"></script>-->
 </head>
-<body ng-controller="MainController as main">
-<navBar></navBar>
-<div>
-    <h2>Angular app is located at: </h2><appLocation></appLocation>
-</div>
-<!--<div ng-view></div>-->
-
-<div>
-    footer...
-</div>
+<body ng-controller="mainController as main">
+<div ng-view></div>
 </body>
 </html>
