--- a/appenv/src/src/templates/index.html
+++ b/appenv/src/src/templates/index.html
@@ -12,7 +12,7 @@
     <script src="{{url_for('static', filename='vendor/angular-bootstrap/ui-bootstrap-tpls.min.js')}}"></script>
     <script src="{{url_for('static', filename='app/app.js')}}"></script>
     <script src="{{url_for('static', filename='app/home/main.controller.js')}}"></script>
-    <script src="{{url_for('static', filename='app/sessions/sessions.service.js')}}"></script>
+    <script src="{{url_for('static', filename='app/sessions/session.service.js')}}"></script>
     <script src="{{url_for('static', filename='app/sessions/sessions.controller.js')}}"></script>
     <!--<script src="{{url_for('static', filename='app/sessions/sessions.controller.js')}}"></script>-->
 </head>
