--- a/appenv/src/src/templates/index.html
+++ b/appenv/src/src/templates/index.html
@@ -16,7 +16,7 @@
     <script src="{{url_for('static', filename='app/sessions/sessions.controller.js')}}"></script>
     <!--<script src="{{url_for('static', filename='app/sessions/sessions.controller.js')}}"></script>-->
 </head>
-<body ng-controller="mainController as main">
+<body ng-controller="MainController as main">
 <div ng-view></div>
 </body>
 </html>
