testing dummy directive

--- a/appenv/src/src/templates/index.html
+++ b/appenv/src/src/templates/index.html
@@ -24,7 +24,7 @@
 <body ng-controller="MainController as main">
 <navBar></navBar>
 <div>
-    <h2>Angular app is located at: </h2><appLocation></appLocation>
+    <h2>Angular app is located at: </h2> " <appLocation></appLocation> "
 </div>
 
 <div>
