interpolateProvider not working

--- a/appenv/src/src/templates/index.html
+++ b/appenv/src/src/templates/index.html
@@ -24,7 +24,7 @@
 <body ng-controller="MainController as main">
 <!--<div ng-include="'../static/app/navigation/navigation.html'"></div>-->
 <div>
-    <p>Testing << main.message >> </p>
+    <p>Testing {% raw %} {{ main.message }} {% endraw %} </p>
 </div>
 
 <div>
