angular on page

--- a/appenv/src/src/templates/index.html
+++ b/appenv/src/src/templates/index.html
@@ -13,22 +13,30 @@
     <!--<script src="{{url_for('static', filename='vendor/angular-bootstrap/ui-bootstrap-tpls.min.js')}}"></script>-->
     <script src="{{url_for('static', filename='app/app.js')}}"></script>
     <script src="{{url_for('static', filename='app/config.js')}}"></script>
-    <script src="{{url_for('static', filename='app/home/main.controller.js')}}"></script>
+    <!--<script src="{{url_for('static', filename='app/home/main.controller.js')}}"></script>-->
     <!--<script src="{{url_for('static', filename='app/navigation/nav.controller.js')}}"></script>-->
     <!--<script src="{{url_for('static', filename='app/navigation/nav.directive.js')}}"></script>-->
-    <script src="{{url_for('static', filename='app/sessions/session.service.js')}}"></script>
-    <script src="{{url_for('static', filename='app/sessions/session-info.controller.js')}}"></script>
-    <script src="{{url_for('static', filename='app/sessions/sessions.controller.js')}}"></script>
+    <!--<script src="{{url_for('static', filename='app/sessions/session.service.js')}}"></script>-->
+    <!--<script src="{{url_for('static', filename='app/sessions/session-info.controller.js')}}"></script>-->
+    <!--<script src="{{url_for('static', filename='app/sessions/sessions.controller.js')}}"></script>-->
     <!--<script src="{{url_for('static', filename='app/dev/app.location.controller.js')}}"></script>-->
     <!--<script src="{{url_for('static', filename='app/dev/app.location.directive.js')}}"></script>-->
 </head>
+<script>
+    function MainController($scope) {
+        $scope.title = 'Hello angular";
+    }
+
+    MainController.$inject = ['$scope'];
+    angular.module('appMain').controller('MainController', MainController);
+</script>
 <body ng-controller="MainController">
 <!--<div ng-include="'../static/app/navigation/navigation.html'"></div>-->
 {% raw %}
-<div ng-view></div>
+<h1> {{ title }} </h1>
 {% endraw %}
-<div>
-    footer...
-</div>
+<p>
+    Lorem ipsum...
+</p>
 </body>
 </html>
