--- a/appenv/src/src/templates/index.html
+++ b/appenv/src/src/templates/index.html
@@ -24,7 +24,7 @@
 </head>
 <script>
     function MainController($scope) {
-        $scope.title = 'Hello angular";
+        $scope.title = 'Hello angular';
     }
 
     MainController.$inject = ['$scope'];
