added people and keys angularjs features

--- a/appenv/src/src/static/css/site.css
+++ b/appenv/src/src/static/css/site.css
@@ -25,3 +25,10 @@ body {
     .navbar-default .navbar-brand {
         color: yellowgreen;
 }
+
+/* Custom rules */
+preview-panel {
+    background-color: cadetblue;
+    color: white;
+    font-size: 120%;
+}
