--- a/appenv/src/src/static/css/site.css
+++ b/appenv/src/src/static/css/site.css
@@ -8,26 +8,27 @@ body {
 .navbar-default {
     background-color: #33383C;
 }
-    .navbar-default .navbar-nav > li > a {
-        color: yellowgreen;
-    }
 
-    .navbar-default .navbar-nav > li > a:hover {
-        color: darkslategray;
-    }
+.navbar-default .navbar-nav > li > a {
+    color: yellowgreen;
+}
 
-        .navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:hover, .navbar-default .navbar-nav > .active > a:focus {
-            color: bisque;
-            background-color: cadetblue;
-            /*background-color: grey;*/
-        }
+.navbar-default .navbar-nav > li > a:hover {
+    color: darkslategray;
+}
 
-    .navbar-default .navbar-brand {
-        color: yellowgreen;
+.navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:hover, .navbar-default .navbar-nav > .active > a:focus {
+    color: bisque;
+    background-color: cadetblue;
+    /*background-color: grey;*/
+}
+
+.navbar-default .navbar-brand {
+    color: yellowgreen;
 }
 
 /* Custom rules */
-preview-panel {
+.preview-panel {
     background-color: cadetblue;
     color: white;
     font-size: 120%;
