--- a/appenv/src/src/static/css/site.css
+++ b/appenv/src/src/static/css/site.css
@@ -9,6 +9,10 @@ body {
     background-color: #33383C;
 }
 
+.navbar-default .navbar-nav > li:hover {
+    background-color: cadetblue;
+}
+
 .navbar-default .navbar-nav > li > a {
     color: yellowgreen;
 }
