(AngularJS) Styling users list view

--- a/appenv/src/src/static/css/site.css
+++ b/appenv/src/src/static/css/site.css
@@ -52,3 +52,9 @@ body {
 .user-field {
     max-width: 30%;
 }
+
+.inline-field {
+    display: inline-block;
+    border-right-style: solid;
+    border-right-color: cadetblue;
+}
