--- a/src/src/static/css/site.css
+++ b/src/src/static/css/site.css
@@ -77,8 +77,7 @@ a.no-decoration {
 }
 
 .hero-img {
-    width: 100%;
-    margin: 0;
-    padding: 0;
     image-orientation: 90deg;
+    width: 100%;
+    max-height: 75%;
 }
