--- a/src/src/static/css/site.css
+++ b/src/src/static/css/site.css
@@ -77,7 +77,9 @@ a.no-decoration {
 }
 
 .hero-img {
+    background-image: url("../images/hero-01.jpg");
     image-orientation: 90deg;
-    width: 100%;
-    max-height: 75%;
+    max-height: 70%;
+    color: white;
+    text-shadow: 3px 2px grey;
 }
