(AngularJS) hero image

--- a/src/src/static/css/site.css
+++ b/src/src/static/css/site.css
@@ -77,24 +77,21 @@ a.no-decoration {
 }
 
 #hero-img {
-    content: "";
-    position: absolute;
-    background-image: url("../images/hero-01.jpg");
-    /*image-orientation: 90deg;*/
-    height: 70%;
-    color: white;
-    text-shadow: 3px 2px grey;
-    -webkit-transform: rotate(90deg);
-    -moz-transform: rotate(90deg);
-    -ms-transform: rotate(90deg);
-    -o-transform: rotate(90deg);
-    transform: rotate(90deg);
+    /*background-image: url("../images/hero-01.jpg");*/
+    image-orientation: 90deg;
+    max-height: 70%;
+    /*height: 70%;*/
+
+    /*-webkit-transform: rotate(90deg);*/
+    /*-moz-transform: rotate(90deg);*/
+    /*-ms-transform: rotate(90deg);*/
+    /*-o-transform: rotate(90deg);*/
+    /*transform: rotate(90deg);*/
 }
 
-#hero-img::after {
-    -webkit-transform: rotate(-90deg);
-    -moz-transform: rotate(-90deg);
-    -ms-transform: rotate(-90deg);
-    -o-transform: rotate(-90deg);
-    transform: rotate(-90deg);
+#hero-caption {
+    position: relative;
+    top: 20%;
+    color: white;
+    text-shadow: 3px 2px grey;
 }
