--- a/src/src/static/css/site.css
+++ b/src/src/static/css/site.css
@@ -77,12 +77,11 @@ a.no-decoration {
 }
 
 #hero-img {
-    /*background-image: url("../images/hero-01.jpg");*/
+    background-image: url("../images/hero-01.jpg");
+    background-size: 100%;
+    background-repeat: no-repeat;
     image-orientation: 90deg;
-    height: 650px;
-    max-height: 60%;
-    /*height: 70%;*/
-
+    max-height: 600px;
     /*-webkit-transform: rotate(90deg);*/
     /*-moz-transform: rotate(90deg);*/
     /*-ms-transform: rotate(90deg);*/
@@ -91,8 +90,7 @@ a.no-decoration {
 }
 
 #hero-caption {
-    position: relative;
-    top: 20%;
     color: white;
     text-shadow: 3px 2px grey;
+    margin-top: -500px;
 }
