(AngularJS) hero image

--- a/src/src/static/css/site.css
+++ b/src/src/static/css/site.css
@@ -77,16 +77,16 @@ a.no-decoration {
 }
 
 #hero-img {
+    height: 600px;
     background-image: url("../images/hero-01.jpg");
     background-size: 100%;
     background-repeat: no-repeat;
-    image-orientation: 90deg;
-    max-height: 600px;
-    /*-webkit-transform: rotate(90deg);*/
-    /*-moz-transform: rotate(90deg);*/
-    /*-ms-transform: rotate(90deg);*/
-    /*-o-transform: rotate(90deg);*/
-    /*transform: rotate(90deg);*/
+    /*image-orientation: 90deg;*/
+    -webkit-transform: rotate(90deg);
+    -moz-transform: rotate(90deg);
+    -ms-transform: rotate(90deg);
+    -o-transform: rotate(90deg);
+    transform: rotate(90deg);
 }
 
 #hero-caption {
