(AngularJS) 60% hero image

--- a/src/src/static/css/site.css
+++ b/src/src/static/css/site.css
@@ -79,7 +79,8 @@ a.no-decoration {
 #hero-img {
     height: 600px;
     background-image: url("../images/hero-01.jpg");
-    background-size: 100%;
+    background-position: center;
+    background-size: 60%;
     background-repeat: no-repeat;
     /*image-orientation: 90deg;*/
     -webkit-transform: rotate(90deg);
