(AngularJS) new hero image

--- a/src/src/static/css/site.css
+++ b/src/src/static/css/site.css
@@ -78,25 +78,24 @@ a.no-decoration {
 
 #hero-img {
     height: 600px;
-    background-image: url("../images/hero-01.jpg");
-    background-position: center;
-    background-size: 60%;
+    background-image: url("../images/hero-img.jpg");
+    background-size: 100%;
     background-repeat: no-repeat;
     /*image-orientation: 90deg;*/
-    -webkit-transform: rotate(90deg);
-    -moz-transform: rotate(90deg);
-    -ms-transform: rotate(90deg);
-    -o-transform: rotate(90deg);
-    transform: rotate(90deg);
+    /*-webkit-transform: rotate(90deg);*/
+    /*-moz-transform: rotate(90deg);*/
+    /*-ms-transform: rotate(90deg);*/
+    /*-o-transform: rotate(90deg);*/
+    /*transform: rotate(90deg);*/
 }
 
 #hero-caption {
     color: white;
     text-shadow: 3px 2px grey;
-    -webkit-transform: rotate(0deg);
-    -moz-transform: rotate(0deg);
-    -ms-transform: rotate(0deg);
-    -o-transform: rotate(0deg);
-    transform: rotate(0deg);
+    /*-webkit-transform: rotate(0deg);*/
+    /*-moz-transform: rotate(0deg);*/
+    /*-ms-transform: rotate(0deg);*/
+    /*-o-transform: rotate(0deg);*/
+    /*transform: rotate(0deg);*/
     margin-top: -500px;
 }
