(css:sidebar) added margin top on sidebar

--- a/administration/src/static/css/site.css
+++ b/administration/src/static/css/site.css
@@ -304,6 +304,7 @@ input[type="file"] {
 /* *********************************************************************************** */
 
 #sidebar-wrapper {
+    margin-top: 50px;
     width: 250px;
     max-width: 90%;
 }
